# Sovereign-Epistemic-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  RUNBOOK.md  generate_notebook.py  preflight_model.py  pyproject.toml  scratch.py  scratch_out.txt
configs/: deepseek_25.yaml  deepseek_chat_25.yaml  deepseek_custom_25.yaml  deepseek_synthesis.yaml  deepseek_synthesis_chat.yaml  default.yaml  experiment.yaml  gsm8k_advanced.yaml  gsm8k_memory_amplified.yaml  gsm8k_memory_amplified_eqbsl.yaml  gsm8k_memory_amplified_eqbsl_tuned.yaml  gsm8k_memory_amplified_eqbsl_tuned_plus_concise.yaml  gsm8k_memory_amplified_eqbsl_tuned_plus_selfcheck.yaml  gsm8k_memory_amplified_eqbsl_tuned_plus_verify.yaml  gsm8k_memory_amplified_eqbsl_tuned_with_verification_decision.yaml  gsm8k_memory_amplified_eqbsl_tuned_with_verification_source.yaml  gsm8k_multi_regime.yaml  gsm8k_multi_regime_eqbsl.yaml  gsm8k_sample.yaml  llama_generator.yaml  llama_generator_ablation.yaml  path_b_medium.yaml  path_b_permissive.yaml  path_b_strict.yaml  recovery_8192.yaml  strange_loop_experiment.yaml  tribunal_codegen_25.yaml  tribunal_full_experiment.yaml  tribunal_m0.yaml  tribunal_m1.yaml  tribunal_m2.yaml  tribunal_valset_eqbsl_with_verification_decision.yaml  tribunal_valset_eqbsl_with_verification_source.yaml  tribunal_valset_experiment.yaml
data/: SelfContained_ARC_Analysis.ipynb  arm1_greedy_recovery_sweep.db  deepseek_25_results.json  deepseek_annotations.json  deepseek_benchmark_ledger.jsonl  deepseek_chat_25_results.json  deepseek_chat_validation_ledger.jsonl  deepseek_custom_25_manifest.txt  (+25 more)
(+250 files in other folders)
